Fix Links and Color Scheme

--- a/about.html
+++ b/about.html
@@ -87,10 +87,10 @@
     <h1>About Code Bloom</h1>
   </header>
   <nav>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-    <a href="#pricing">Pricing</a>
-    <a href="#sessions">Sessions</a>
+    <a href="index.html">Home</a>
+    <a href="contact.html">Contact</a>
+    <a href="pricing.html">Pricing</a>
+    <a href="session.html">Sessions</a>
   </nav>
 
   <div class="content">
