--- a/index.html
+++ b/index.html
@@ -3,35 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coding Tutoring</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Code Bloom - Learn to Code</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+            color: white;
+            text-align: center;
+        }
+        .container {
+            padding: 50px;
+        }
+        .logo {
+            font-size: 32px;
+            font-weight: bold;
+            color: white;
+        }
+        .hero {
+            margin-top: 50px;
+        }
+        .hero h1 {
+            font-size: 42px;
+            margin-bottom: 20px;
+        }
+        .hero p {
+            font-size: 18px;
+            margin-bottom: 30px;
+        }
+        .cta-button {
+            display: inline-block;
+            padding: 15px 30px;
+            font-size: 20px;
+            color: white;
+            background: #1E3A8A;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            text-decoration: none;
+        }
+        .cta-button:hover {
+            background: #1E3A8A;
+        }
+        .features {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 50px;
+        }
+        .feature-box a {
+            text-decoration: none;
+            color: white;
+            font-size: 18px;
+            font-weight: bold;
+            display: block;
+            padding: 10px;
+            background: #1E3A8A;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        .feature-box a:hover {
+            background: #1E3A8A;
+        }
+        .feature-box {
+            background: rgba(220, 220, 220, 0.1);
+            padding: 20px;
+            border-radius: 10px;
+            width: 200px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        Coding Tutoring
-    </header>
-    <nav>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-        <a href="#pricing">Pricing</a>
-    </nav>
     <div class="container">
-        <section id="about">
-            <h2>About Us</h2>
-            <p>We teach people how to code in Python, Rust, C++, JavaScript, and TypeScript.</p>
-        </section>
-        <section id="pricing" class="pricing">
-            <h2>Pricing</h2>
-            <p>$15 per one-hour session</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Email: contact@codingtutoring.com</p>
-        </section>
+        <div class="logo">Code Bloom</div>
+        <div class="hero">
+            <h1>Unlock Your Coding Potential</h1>
+            <p>Personalized coding lessons to take your skills to the next level.</p>
+            <a href="contact.html" class="cta-button">Book a Session</a>
+        </div>
+        <div class="features">
+            <div class="feature-box"><a href="about.html">About</a></div>
+            <div class="feature-box"><a href="pricing.html">Pricing</a></div>
+            <div class="feature-box"><a href="session.html">Sessions</a></div>
+        </div>
     </div>
-    
-    <footer>
-        &copy; 2025 Coding Tutoring. All Rights Reserved.
-    </footer>
 </body>
 </html>
