Change the header to be consistent through every page

--- a/contact.html
+++ b/contact.html
@@ -78,10 +78,11 @@
     
     <header style="text-align: center; font-size: 24px; padding: 20px; background-color: #1E3A8A; color: white; width: 100%;">Contact Us</header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="pricing.html">Pricing</a>
-        <a href="session.html">Sessions</a>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./contact.html">Contact</a>
+        <a href="./pricing.html">Pricing</a>
+        <a href="./session.html">Sessions</a>
       </nav>
     <div class="container" style="padding-left: 10px;">
         <h2>Get in Touch</h2>
