--- a/pricing.html
+++ b/pricing.html
@@ -96,10 +96,11 @@
         <h1>Code Bloom - Tutoring Pricing</h1>
     </div>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="session.html">Sessions</a>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./contact.html">Contact</a>
+        <a href="./pricing.html">Pricing</a>
+        <a href="./session.html">Sessions</a>
       </nav>
 
     <div class="content">
