--- a/session.html
+++ b/session.html
@@ -15,6 +15,7 @@
 
     html, body {
       width: 100%;
+      height: 100%;
       overflow-x: hidden;
     }
 
@@ -23,7 +24,7 @@
     }
 
     header {
-      background-color: #4CAF50;
+      background-color: #1E3A8A;
       color: white;
       text-align: center;
       padding: 1rem;
@@ -52,14 +53,15 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      align-items: center;
       gap: 1rem;
       padding: 2rem;
     }
 
     .session-card {
       background-color: #f4f4f4;
-      width: 200px;
-      height: 250px;
+      width: 220px;
+      height: 270px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -90,7 +92,7 @@
     .session-card p {
       font-size: 1rem;
       font-weight: bold;
-      color: #4CAF50;
+      color: #1E3A8A;
     }
 
     footer {
@@ -107,10 +109,11 @@
     Coding Tutoring Sessions
   </header>
   <nav>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-    <a href="#pricing">Pricing</a>
-    <a href="#sessions">Sessions</a>
+    <a href="./index.html">Home</a>
+    <a href="./about.html">About</a>
+    <a href="./contact.html">Contact</a>
+    <a href="./pricing.html">Pricing</a>
+    <a href="./session.html">Sessions</a>
   </nav>
   <div class="container">
     <div class="session-card">
@@ -121,7 +124,7 @@
     <div class="session-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/ISO_C%2B%2B_Logo.svg" alt="C++ Logo" class="session-logo">
       <h3>C++</h3>
-      <p>$18 per session</p>
+      <p>$20 per session</p>
     </div>
     <div class="session-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/f/f5/Typescript.svg" alt="TypeScript Logo" class="session-logo">
@@ -131,12 +134,12 @@
     <div class="session-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" alt="JavaScript Logo" class="session-logo">
       <h3>JavaScript</h3>
-      <p>$17 per session</p>
+      <p>$15 per session</p>
     </div>
     <div class="session-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Rust_programming_language_black_logo.svg" alt="Rust Logo" class="session-logo">
       <h3>Rust</h3>
-      <p>$25 per session</p>
+      <p>$20 per session</p>
     </div>
   </div>
   <footer>
