--- a/about.html
+++ b/about.html
@@ -87,10 +87,11 @@
     <h1>About Code Bloom</h1>
   </header>
   <nav>
-    <a href="index.html">Home</a>
-    <a href="contact.html">Contact</a>
-    <a href="pricing.html">Pricing</a>
-    <a href="session.html">Sessions</a>
+    <a href="./index.html">Home</a>
+    <a href="./about.html">About</a>
+    <a href="./contact.html">Contact</a>
+    <a href="./pricing.html">Pricing</a>
+    <a href="./session.html">Sessions</a>
   </nav>
 
   <div class="content">
